--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
         <p>The main site for the SPHIS Comic by sphis_sinco.</p>
 
-        <h1>Alternative Sites (Episodes released later than here)</h1>
-        <a href="">Webtoons</a>
+        <h1>Alternative Sites (Episodes released later than here, normally)</h1>
+        <a href="https://www.webtoons.com/en/canvas/sphis/list?title_no=1064928">Webtoons</a>
 
         <h1>Episodes</h1>
         <a href="episodes/ep1/ep1.html">Episode 1 (6/14/2025)</a>
