Links at the bottom

--- a/episodes/ep1/ep1.html
+++ b/episodes/ep1/ep1.html
@@ -42,5 +42,9 @@
         <img src="./bonus3.png">
         <img src="./bonus4.png">
         <img src="./bonus5.png">
+        
+        <a href="../../index.html">Homepage</a>
+
+        <a href="#Main">Main panels</a>
 </body>
 </html>
