--- a/index.html
+++ b/index.html
@@ -4,14 +4,28 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>SPHIS Comic</title>
+
+        <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-        <p>The main site for the SPHIS Comic by sphis_sinco.</p>
+        <div id="boxed">
+                <p>The main site for the SPHIS Comic by sphis_sinco.</p>
+        </div>
 
-        <h1>Alternative Sites (Episodes released later than here, normally)</h1>
-        <a href="https://www.webtoons.com/en/canvas/sphis/list?title_no=1064928">Webtoons</a>
+        <br>
 
-        <h1>Episodes</h1>
-        <a href="episodes/ep1/ep1.html">Episode 1 (6/14/2025)</a>
+        <div id="boxed">
+                <div id="double_boxed">
+                        <h1>Alternative Sites (Episodes released later than here, normally)</h1>
+                        <a href="https://www.webtoons.com/en/canvas/sphis/list?title_no=1064928">Webtoons</a>
+                </div>
+
+                <br>
+
+                <div id="double_boxed">
+                        <h1>Episodes</h1>
+                        <a href="episodes/ep1/ep1.html">Episode 1 (6/14/2025)</a>
+                </div>
+        </div>
 </body>
 </html>
