--- a/episodes/ep1/ep1.html
+++ b/episodes/ep1/ep1.html
@@ -19,14 +19,17 @@
                 <div id="double_boxed">
                         <h1>Creators note</h1>
                         <p>I think the most fun part of this was going back in the channel history to try and already have a starter for the series. I defenitely found that to be fun.
-                                <br><br>I also decided to make the artstyle part of the lore, I thought that would be a nice unique part of the series.
-                                <br><br>Random thing: I like how it looks like a film roll.</p>
+                        <br><br>
+                        I also decided to make the artstyle part of the lore, I thought that would be a nice unique part of the series.
+                        <br><br>
+                        Random thing: I like how it looks like a film roll.</p>
                 </div>
 
                 <br><hr><br>
 
                 <div id="double_boxed">
                         <h1 id="Main">Episode 1 - "Portilizen, what have you done?"</h1>
+                        <p>Released 6/14/2025 on all sites</p>
                         
                         <img src="./panel1.png">
                         <img src="./panel2.png">
