--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
                 <div id="double_boxed">
                         <h1>Episodes</h1>
-                        <a href="episodes/ep1/ep1.html">Episode 1 (6/14/2025)</a>
+                        <a href="episodes/ep1/ep1.html">Episode 1 (6/14/2025)</a><br>
+                        <a href="episodes/ep2/ep2.html">Episode 2 (6/14/2025)</a><br>
                 </div>
         </div>
 </body>
