--- a/episodes/ep2/ep2.html
+++ b/episodes/ep2/ep2.html
@@ -29,7 +29,7 @@
                 <div id="double_boxed">
                         <h1 id="Main">Episode 2 - "Haxen Filp, Technological Brawl"</h1>
                         <p>Released 6/14/2025 on SPHIS-COMIC</p>
-                        <p>Releasing 6/15/2025 on Webtoons</p>
+                        <p>Released 6/15/2025 on Webtoons</p>
                         
                         <img src="./panel1.png">
                         <img src="./panel2.png">
